# adobe-assignment

./: .gitignore  CLAUDE.md  README.md  ___Architecture.md  nx.json  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json
.claude/commands/: ADOBE-Start.md  ADOBE-Stop.md
.cursor/rules/: 001-adobe-pipeline.mdc  005-fastapi-python.mdc  010-frontend-scss.mdc  020-zustand.mdc
apps/api/: .env.example  project.json  pyproject.toml
apps/api/src/: dependencies.py  errors.py  main.py  paths.py
apps/api/src/routes/: __init__.py  auth.py  campaign.py  health.py
apps/api/src/services/: asset_resolver.py  brief_parser.py  checks.py  compositor.py  hero_cache.py  localization.py  prompt_gen.py
apps/api/src/services/image_gen/: __init__.py  luma.py
apps/api/tests/: test_asgi.py  test_checks.py
apps/web/: index.html  package.json  pnpm-lock.yaml  project.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  main.tsx
apps/web/src/lib/: campaignApi.ts
apps/web/src/pages/Campaign/: CampaignPage.module.scss  CampaignPage.tsx  campaignFormDefaults.ts  types.ts
apps/web/src/styles/: _globals.scss  _variables.scss
config/: brand.yaml
z_Documents/: PRD.md  README.md  plan.md
